--- a/POE PROG6212/POE PROG6212.csproj
+++ b/POE PROG6212/POE PROG6212.csproj
@@ -67,13 +67,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HRUsers.aspx" />
     <Content Include="Web.config" />
     <Content Include="LoginPage.aspx" />
     <Content Include="ClaimTracking.aspx" />
-    <Content Include="AddClaims.aspx" />
+    <Content Include="ClaimSubmission.aspx" />
     <Content Include="ViewClaims.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HRUsers.aspx.cs">
+      <DependentUpon>HRUsers.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HRUsers.aspx.designer.cs">
+      <DependentUpon>HRUsers.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoginPage.aspx.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
@@ -89,12 +97,12 @@
     <Compile Include="ClaimTracking.aspx.designer.cs">
       <DependentUpon>ClaimTracking.aspx</DependentUpon>
     </Compile>
-    <Compile Include="AddClaims.aspx.cs">
-      <DependentUpon>AddClaims.aspx</DependentUpon>
+    <Compile Include="ClaimSubmission.aspx.cs">
+      <DependentUpon>ClaimSubmission.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="AddClaims.aspx.designer.cs">
-      <DependentUpon>AddClaims.aspx</DependentUpon>
+    <Compile Include="ClaimSubmission.aspx.designer.cs">
+      <DependentUpon>ClaimSubmission.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewClaims.aspx.cs">
       <DependentUpon>ViewClaims.aspx</DependentUpon>
